# hcibrain

./: .env.example  .gitignore  .pre-commit-config.yaml  .~lock.analysis.csv#  API_TESTING.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_VISION.md  CLAUDE.md  DEV_REFERENCE.md  GETTING_STARTED.md  MEMORY.md  Makefile  NEWCODEREVIEW.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SPEC.md  USER_GUIDE.md  Vite + React + TS.html  WEEK1_IMPLEMENTATION_PLAN.md  analysis.csv  autisticadults_extraction.json  autisticadults_modified_extraction.json  batch_export.csv  code_quality_baseline.json  codereview.md  codereview_plan.md  fixed_results.json  hci-extractor-mvp-design.md  hcibrain.sh  memory.md  package-lock.json  package.json  pyproject.toml  quick_test.sh  results  results.csv  results.md  setup_config.sh  (+4 more)
.github/workflows/: code-quality.yml
Vite + React + TS_files/: client  main.tsx
archive/: README.md  STATUS_SUMMARY.md
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  SPECIFICATION.md
docs/archived/: ARCHITECTURE_IMPROVEMENT_PLAN.md  CLI_CONFIGURATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  PHASE1_PLAN.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_PLAN.md
prompts/: base_prompts.yaml
prompts/examples/: abstract_examples.yaml  methods_examples.yaml  results_examples.yaml
prompts_backup/: base_prompts.yaml  section_guidance.yaml
prompts_backup/examples/: methods_examples.yaml
scripts/: code_quality_baseline.py  demo_simple_extraction.py  dev.sh  setup.bat  setup.sh  test.py  test_end_to_end.py  test_exceptions.py  test_gemini_integration.py  test_prompt_integration.py  test_prompts.py  test_section_detection.py  test_section_processor.py  test_simple_extraction.py  test_simple_pipeline_no_deps.py
src/hci_extractor/: __main__.py  main.py
src/hci_extractor/cli/: __init__.py  cli_configuration_service.py  commands.py  commands_backup.py  commands_new.py  config_builder.py  config_options.py  config_profiles.py  progress.py
src/hci_extractor/cli/command_modules/: __init__.py  export_utils.py  processing_commands.py
src/hci_extractor/core/: config.py  di_container.py  events.py  metrics.py
src/hci_extractor/core/analysis/: __init__.py  section_detector.py  section_processor.py  simple_extractor.py  simple_validator.py
src/hci_extractor/core/domain/: __init__.py  services.py  transformers.py  validators.py
src/hci_extractor/core/extraction/: __init__.py  pdf_extractor.py  text_normalizer.py
src/hci_extractor/core/models/: __init__.py  exceptions.py  pdf_models.py
src/hci_extractor/extractors/: __init__.py  pdf_extractor.py
src/hci_extractor/infrastructure/: __init__.py  configuration_service.py
src/hci_extractor/models/: __init__.py  pdf_models.py
src/hci_extractor/pipeline/: section_detector.py  simple_extractor.py  simple_validator.py
src/hci_extractor/prompts/: __init__.py  prompt_manager.py
src/hci_extractor/providers/: __init__.py  base.py  gemini_provider.py  provider_config.py
src/hci_extractor/ui/: __init__.py
src/hci_extractor/utils/: __init__.py  error_classifier.py  json_recovery.py  logging.py  retry_handler.py  user_error_translator.py
src/hci_extractor/web/: app.py  dependencies.py  exceptions.py  progress.py
src/hci_extractor/web/models/: requests.py  responses.py
src/hci_extractor/web/routes/: extract.py  health.py  websocket.py
src/hci_extractor/web/static/: index.html  script.js  styles.css
test_batch_output/: autisticadults_extraction.json  batch_summary.json
tests/: conftest.py  test_architecture_compliance.py  test_basic.py  test_classification_precision.py  test_cli_integration.py  test_config_integration.py  test_event_integration.py  test_immutable_providers.py  test_json_recovery.py  test_llm.py  test_metrics_integration.py  test_models.py  test_pipeline.py  test_retry_handler.py  test_simple_extraction.py  test_verbatim_validation.py
